--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>phy 101 Interactive Quiz</title>
+  <title>Zoo 101 Digestive system Interactive Quiz</title>
   <style>
     :root{--bg:#0f172a;--card:#111827;--accent:#06b6d4;--muted:#94a3b8;--white:#e6eef6}
     html,body{height:100%}
