Update WhatsApp share link in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
          
   <script>
     function shareOnWhatsApp() {
-        const message = "https://readoneab25.github.io/Zoo-101-Digestive-system-/";
+        const message = "https://generalhealthandwellness.com/zoo-101-digestive-system-interactive-quiz/";
         const encodedMessage = encodeURIComponent(message);
         const whatsappUrl = "whatsapp://send?text=" + encodedMessage;
         window.open(whatsappUrl, '_blank');
